--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,10 +4,6 @@
 
 @layer base {
   :root {
-    --background: 224 71% 4%;
-    --foreground: 213 31% 91%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
+    @apply bg-slate-950 text-sm text-slate-50;
   }
 }
